Instantiating wrappers - from 'new Wrapper(arg)' to 'Wrapper.valueOf(org)'
Fixes SonarQube issues