@@ -263,7 +263,7 @@ public class ResultDesc {
                 case FieldTypeEnumeration.BOOLEAN  :
                         boolean booleanValue = resultData.getBoolean(index);
                         if(!resultData.wasNull() )
-                            retVal = new Boolean(booleanValue);
+                            retVal = Boolean.valueOf(booleanValue);
                         break;
                 case FieldTypeEnumeration.CHARACTER_PRIMITIVE :
                 case FieldTypeEnumeration.CHARACTER  :
@@ -275,37 +275,37 @@ public class ResultDesc {
                 case FieldTypeEnumeration.BYTE  :
                         byte byteValue = resultData.getByte(index);
                         if(!resultData.wasNull() )
-                            retVal = new Byte(byteValue);
+                            retVal = Byte.valueOf(byteValue);
                         break;
                 case FieldTypeEnumeration.SHORT_PRIMITIVE :
                 case FieldTypeEnumeration.SHORT  :
                         short shortValue = resultData.getShort(index);
                         if(!resultData.wasNull() )
-                            retVal = new Short(shortValue);
+                            retVal = Short.valueOf(shortValue);
                         break;
                 case FieldTypeEnumeration.INTEGER_PRIMITIVE :
                 case FieldTypeEnumeration.INTEGER  :
                         int intValue = resultData.getInt(index);
                         if(!resultData.wasNull() )
-                            retVal = new Integer(intValue);
+                            retVal = Integer.valueOf(intValue);
                         break;
                 case FieldTypeEnumeration.LONG_PRIMITIVE :
                 case FieldTypeEnumeration.LONG  :
                         long longValue = resultData.getLong(index);
                         if(!resultData.wasNull() )
-                            retVal = new Long(longValue);
+                            retVal = Long.valueOf(longValue);
                         break;
                 case FieldTypeEnumeration.FLOAT_PRIMITIVE :
                 case FieldTypeEnumeration.FLOAT  :
                         float floatValue = resultData.getFloat(index);
                         if(!resultData.wasNull() )
-                            retVal = new Float(floatValue);
+                            retVal = Float.valueOf(floatValue);
                         break;
                 case FieldTypeEnumeration.DOUBLE_PRIMITIVE :
                 case FieldTypeEnumeration.DOUBLE  :
                         double doubleValue = resultData.getDouble(index);
                         if(!resultData.wasNull() )
-                            retVal = new Double(doubleValue);
+                            retVal = Double.valueOf(doubleValue);
                         break;
                 case FieldTypeEnumeration.BIGDECIMAL :
                 case FieldTypeEnumeration.BIGINTEGER :
@@ -363,7 +363,7 @@ public class ResultDesc {
         } catch (SQLException e) {
             if(logger.isLoggable(Logger.WARNING) ) {
                 Object items[] =
-                    { new Integer(index), new Integer(resultType), new Integer(columnType), e};
+                    { Integer.valueOf(index), Integer.valueOf(resultType), Integer.valueOf(columnType), e};
                 logger.log(Logger.WARNING,"sqlstore.resultdesc.errorgettingvalefromresulset",items);
             }
             throw e;
